Downgrade from jdk-22 to jdk-17 | docker-compose.yml change db url | deleted test folder